# Op

./: README.md  dune-project  grammar.typ  idea.op  list.op  notice.md  test.op
_build/: .db  .digest-db  trace.csexp
_build/default/: Op.dune-package  Op.install  Op.opam  README.md
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: Op.cma  Op.cmxa  Op.cmxs
_build/default/lib/.Op.objs/byte/: op.cmi  op.cmo  op.cmt
_build/default/lib/.Op.objs/native/: op.cmx
_build/default/lib/.merlin-conf/: lib-Op
_build/default/lib/ast/: ast.cma  ast.cmxa  ast.cmxs
_build/default/lib/ast/.merlin-conf/: lib-ast
_build/default/lib/interpreter/: interpreter.cma  interpreter.cmxa  interpreter.cmxs  interpreter.ml
_build/default/lib/interpreter/.merlin-conf/: lib-interpreter
_build/default/lib/lexer/: lexer.cma  lexer.cmxa  lexer.cmxs  lexer.ml
_build/default/lib/lexer/.merlin-conf/: lib-lexer
_build/default/lib/parser/: parser.cma  parser.cmxa  parser.cmxs  parser.ml  parser_bis.ml
_build/default/lib/parser/.merlin-conf/: lib-parser  lib-parser_bis
_build/default/lib/token/: token.cma  token.cmxa  token.cmxs  token.ml  token_type.cma  token_type.cmxa  token_type.cmxs  token_type.ml
_build/default/lib/token/.merlin-conf/: lib-token  lib-token_type
_build/default/lib/utility/: utility.cma  utility.cmxa  utility.cmxs
lib/: dune
lib/ast/: ast.ml  dune
lib/interpreter/: dune  interpreter.ml
lib/lexer/: dune  lexer.ml
lib/parser/: dune  parser.ml
lib/token/: dune  token.ml  token_type.ml
lib/utility/: dune  utility.ml
(+32 files in other folders)
