(lang dune 3.18)

(name Op)

(generate_opam_files true)

(source
 (github akSkwYX/Op_language))

(authors "Hurot Eliott <eliott.hurot@gmail.com>")

(maintainers "Hurot Eliott <eliott.hurot@gmail.com>")

(documentation https://url/to/documentation) ;TODO

(package
 (name Op)
 (synopsis "Op a langage based on operators")
 (description "Op is an interpreted langage of Ocaml based on operators")
 (depends ocaml)
 )
